--- a/src/styles/custom-swiper.css
+++ b/src/styles/custom-swiper.css
@@ -1,6 +1,6 @@
 .swiper-button-next,
 .swiper-button-prev {
-  color: #D97706; /* Tailwind's yellow-600 */
+  color: #0D9488; /* Tailwind's yellow-600 */
   font-size: 18px !important; /* smaller arrows */
   scale: 0.5;
 }
